--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>xians-creations</title>
+    <title>Xian's Creations</title>
   </head>
   <body>
     <div id="root"></div>
+    <video
+      class="x_wd_waves"
+      autoplay="autoplay"
+      muted="muted"
+      loop="loop"
+      playsinline="playsinline"
+    >
+      <source
+        src="/src/assets/waves.mp4"
+        type="video/mp4"
+      />
+      Your browser does not support the video tag.
+    </video>
+    <div class="noise"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
