--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
       loop="loop"
       playsinline="playsinline"
     >
-      <source
-        src="/src/assets/waves.mp4"
-        type="video/mp4"
-      />
+      <source src="/src/assets/waves.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
     <div class="noise"></div>
